k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: libshary
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        node-role.kubernetes.io/application: 'true'
      containers:
        - name: api
          imagePullPolicy: IfNotPresent
          image: ghcr.io/vvcodeweb/libshary/libshary-api
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: libshary
spec:
  selector:
    app: api
  ports:
    - port: 3000
