k8s/base/booksearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksearch
  namespace: libshary
spec:
  selector:
    matchLabels:
      app: booksearch
  template:
    metadata:
      labels:
        app: booksearch
    spec:
      nodeSelector:
        node-role.kubernetes.io/application: 'true'
      containers:
        - name: booksearch
          imagePullPolicy: IfNotPresent
          image: ghcr.io/vvcodeweb/libshary/libshary-booksearch
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001

          ports:
            - containerPort: 3001
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: booksearch
  namespace: libshary
spec:
  selector:
    app: booksearch
  ports:
    - port: 3001
      name: booksearch
    - port: 50051
      name: grpc
