k8s/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: libshary
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        node-role.kubernetes.io/application: 'true'
      containers:
        - name: redis
          image: redis:latest
          args: ['--requirepass', '$(REDIS_PASSWORD)']
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: libshary
spec:
  selector:
    app: redis
  ports:
    - port: 6379
