k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: libshary
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        node-role.kubernetes.io/application: 'true'
      containers:
        - name: web
          imagePullPolicy: IfNotPresent
          image: ghcr.io/vvcodeweb/libshary/libshary-web:$(VERSION)
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: libshary
spec:
  selector:
    app: web
  ports:
    - port: 4200
      targetPort: 3000
